--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/alerta.js"></script>
 </head>
 <body>
     <h1>Soy un ejemplo</h1>
@@ -33,7 +35,18 @@
         </li>
     </ul>
     <h2>
-        Una vez todo hecho guardamos todos los cambios, podemos ir al menu en la parte superior izquierda, Archivo/File 
+        Una vez todo hecho guardamos todos los cambios, podemos ir al menu en la parte superior izquierda, Archivo/File. Como se mostro guardar todo / save all.
+        Ahora vamos hacer lo siguiente para encontrar la carpeta donde esta todo esto que creamos por si no recordamos su ubicacion. Click derecho en el archivo se elege la opcion mostrar en explorador de archivos. vamos a la carpeta.
+        Seleccionamos todo y vamos donde esta nuestra repo o creamos una nueva.
     </h2>
+    <h2>Ahora si lo actualizamos tanto como cambiar codigo o crear nuevos archivos por ejemplo agregamos javascript, estilo, e imagenes,
+        Ahora deberiamos actualizar nuestro repositorio y crear ademas los archivos nuevos que vamos agregar al proyecto.
+        COmo se ve el titulo con h1 como indique en css quedo con el color que indique, quiere decir que se aplicaron correctamente los cambios, reconocio el archivo style.css, por otro lado no siempre hay que fiar de la extension para probar cambios porque puede pasar como el archivo de javascript no reconozca la funcion.
+        Pero cuando se copio la direccion y se ingreso desde un navegador externo funciono sin problemas y mostro el cartel de alerta.
+        Ahora guardamos todo en mi caso desde windows voy a usar el atajo desde el teclado 
+        control+k y luego presionamos s, que ahora presione deberia estar todo guardado.
+        Lo podemos comprobar donde hicimos cambios como con los nuevos archivos cerrando su ventana. Ahora solo selecionaremos los archivos que modificamos y los nuevos que creamos para que sea mas rapido.
+    </h2>
+
 </body>
 </html>
